# navigation2_ignition_gazebo_example

./: .artefactsignore  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  artefacts.yaml  deps.repos  package.xml
config/: diff_drive_controller_velocity.yaml  nav2_params.yaml  ukf.yaml
launch/: bringup.launch.py  localization.launch.py  navigation.launch.py  simulation.launch.py  visualization.launch.py
rerun/: .gitignore  requirements.txt  run_rerun.py
src/sam_bot_description/: CMakeLists.txt  package.xml
src/sam_bot_description/config/: nav2_params.yaml
src/sam_bot_description/launch/: complete_navigation.launch.py  display.launch.py
src/sam_bot_description/models/TurtlebotArena/: model.sdf
src/sam_bot_description/rviz/: navigation_config.rviz
src/sam_bot_description/scripts/: follow_waypoints.py  nav_test.py  reach_goal.py
src/sam_bot_description/src/description/: sam_bot_description.urdf
src/sam_bot_description/test/: reach_goal.launch.py  test_bringup.launch.py  test_follow_waypoints.launch.py  test_reach_goal.launch.py
src/sam_bot_description/world/: empty.sdf
src/sam_bot_nav2_gz/: CMakeLists.txt  package.xml  requirements.txt
src/sam_bot_nav2_gz/config/: diff_drive_controller_velocity.yaml  map_server.yaml  nav2_params.yaml  ukf.yaml
src/sam_bot_nav2_gz/launch/: bringup.launch.py  complete_navigation.launch.py  display.launch.py  localization_launch.py
src/sam_bot_nav2_gz/models/TurtlebotArena/: model.config  model.sdf
src/sam_bot_nav2_gz/models/aws_robomaker_retail_BookC_01/: model.sdf
src/sam_bot_nav2_gz/models/aws_robomaker_retail_BookE_01/: model.sdf
src/sam_bot_nav2_gz/models/aws_robomaker_retail_Spotlight_01/: model.sdf
src/sam_bot_nav2_gz/rviz/: navigation_config.rviz
src/sam_bot_nav2_gz/scripts/: follow_waypoints.py  reach_goal.py
src/sam_bot_nav2_gz/src/description/: sam_bot_description.urdf
src/sam_bot_nav2_gz/test/: bridge.yaml  test_bringup.launch.py  test_follow_waypoints.launch.py  test_odometry_node.py  test_reach_goal.launch.py
src/sam_bot_nav2_gz/world/: bookstore.sdf  diff_drive.sdf  empty.sdf  turtlebot3_world.xcf  turtlebot3_world.yaml
(+15 files in other folders)
