<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sam_bot_nav2_gz</name>
  <version>1.0.0</version>
  <description>Nav2 Example with (Ignition) Gazebo</description>
  <maintainer email="polzin.max@gmail.com">Max Polzin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
